Fix gap

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@
 .projectsContainer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 8px;
+    gap: 15px;
 }
 
 .projectsContainer > div {
